<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:cardview="http://schemas.android.com/apk/res-aut"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/card_view"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:layout_marginStart="16dp"
    android:layout_marginTop="8dp"
    android:layout_marginEnd="16dp"
    android:layout_marginBottom="8dp"
    cardview:cardCornerRadius="8dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingRight="16dp" >

        <ImageView
            android:id="@+id/imgv_donut_photo"
            android:layout_width="100dp"
            android:layout_height="100dp"
            cardview:layout_constraintBottom_toBottomOf="parent"
            cardview:layout_constraintStart_toStartOf="parent"
            cardview:layout_constraintTop_toTopOf="parent"
            tools:srcCompat="@tools:sample/avatars" />

        <TextView
            android:id="@+id/tv_item_donut_name"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="8dp"
            android:text="@string/donut_name"
            android:textColor="@color/primary_black"
            android:textSize="16sp"
            android:textStyle="bold"
            app:layout_constraintStart_toEndOf="@+id/imgv_donut_photo"
            app:layout_constraintTop_toTopOf="@+id/imgv_donut_photo"
            cardview:layout_constraintEnd_toEndOf="parent"
            cardview:layout_constraintStart_toEndOf="@+id/imgv_donut_photo"
            cardview:layout_constraintTop_toTopOf="@+id/imgv_donut_photo" />

        <TextView
            android:id="@+id/tv_item_donut_price"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:text="@string/donut_price"
            android:textColor="@color/secondary_black"
            android:textSize="12sp"
            app:layout_constraintStart_toStartOf="@+id/tv_item_donut_name"
            app:layout_constraintTop_toBottomOf="@+id/tv_item_donut_name"
            cardview:layout_constraintStart_toStartOf="@+id/tv_item_donut_name"
            cardview:layout_constraintTop_toBottomOf="@+id/tv_item_donut_name" />

        <TextView
            android:id="@+id/tv_item_donut_dec_overview"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:ellipsize="end"
            android:maxLines="2"
            android:text="@string/donut_desc_list"
            android:textColor="@color/secondary_black"
            android:textSize="12sp"
            app:layout_constraintStart_toStartOf="@+id/tv_item_donut_name"
            app:layout_constraintTop_toBottomOf="@+id/tv_item_donut_price" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.cardview.widget.CardView>